Fix scrolling on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,8 @@
 @import "../../scss/colors.scss";
 
 .header {
-  background-color: $navbar-color;
+  // background-color: $navbar-color;
+  background-color: red;
   top: 0px;
   width: 100%;
   z-index: 999;
