--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,9 +8,14 @@
 
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+  position: relative;
   font: 100% $font-stack;
   background-color: $background-color-light;
   height: 100%;
